// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defines asymmetric unary matchers 1`] = `
<d>expect(</><r>received</><d>).</>toEqual<d>(</><g>expected</><d>) // deep equality</>

<g>- Expected  - 1</>
<r>+ Received  + 1</>

<d>  Object {</>
<g>-   "value": toBeDivisibleBy<2>,</>
<r>+   "value": 3,</>
<d>  }</>
`;

exports[`defines asymmetric unary matchers that can be prefixed by not 1`] = `
<d>expect(</><r>received</><d>).</>toEqual<d>(</><g>expected</><d>) // deep equality</>

<g>- Expected  - 1</>
<r>+ Received  + 1</>

<d>  Object {</>
<g>-   "value": not.toBeDivisibleBy<2>,</>
<r>+   "value": 2,</>
<d>  }</>
`;

exports[`defines asymmetric variadic matchers 1`] = `
<d>expect(</><r>received</><d>).</>toEqual<d>(</><g>expected</><d>) // deep equality</>

<g>- Expected  - 1</>
<r>+ Received  + 1</>

<d>  Object {</>
<g>-   "value": toBeWithinRange<4, 11>,</>
<r>+   "value": 3,</>
<d>  }</>
`;

exports[`defines asymmetric variadic matchers that can be prefixed by not 1`] = `
<d>expect(</><r>received</><d>).</>toEqual<d>(</><g>expected</><d>) // deep equality</>

<g>- Expected  - 1</>
<r>+ Received  + 1</>

<d>  Object {</>
<g>-   "value": not.toBeWithinRange<1, 3>,</>
<r>+   "value": 2,</>
<d>  }</>
`;

exports[`is available globally when matcher is unary 1`] = `expected 15 to be divisible by 2`;

exports[`is available globally when matcher is variadic 1`] = `expected 15 to be within range 1 - 3`;

exports[`is ok if there is no message specified 1`] = `<r>No message was specified for this matcher.</>`;

exports[`prints the Symbol into the error message 1`] = `
<d>expect(</><r>received</><d>).</>toEqual<d>(</><g>expected</><d>) // deep equality</>

<g>- Expected  - 1</>
<r>+ Received  + 1</>

<d>  Object {</>
<g>-   "a": toBeSymbol<Symbol(bar)>,</>
<r>+   "a": Symbol(foo),</>
<d>  }</>
`;
